--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Guess</string>
+    <string name="please_enter_a_number">Please enter a number(1-100)</string>
+    <string name="guess">Guess</string>
+    <string name="smaller">Smaller!!!</string>
+    <string name="bigger">Bigger!!!</string>
+    <string name="you_got_it">You got it!!!</string>
 </resources>
